# blaze2d

./: .gitignore  Cargo.toml  EIGENSOLVER_FIXES.md  EIGENSOLVER_IMPROVEMENTS.md  FULL_PIPELINE.md  LICENSE  MPB_PIPELINE.md  MPB_PRECONDITIONER.md  Makefile  PIPELINE_IMMEDIATE_FIXES.md  PIPELINE_INSPECTION.md  PROJECT_CHECKLIST.md  PROJECT_IMPLEMENTATION.md  README.md  profile_test.json  results_te_default_check.json  results_te_default_check_2.json
.cargo/: config.toml
artifacts/: hex_te_eps13_r0p3_res24_k6_b8_mpb2d.csv  hex_tm_eps13_r0p3_res24_k6_b8_mpb2d.csv
benchmarks/: .gitignore  BenchmarkChecklist.md  Makefile  README.md  analyze_speed.py  bench_blaze2d.py  bench_mpb_multiprocess.py  bench_mpb_speed.py  bench_series1_epsilon.py  bench_series2_bands.py  bench_series3_resolution.py  bench_series4_iterations.py  bench_series5_memory.py  bench_series6_accuracy.py  bench_series7_scaling.py  config_a_square_te.toml  config_a_square_tm.toml  config_b_hex_te.toml  config_b_hex_tm.toml  extract_blaze_iterations.py  extract_mpb_iterations.py  mpb_worker.py  plot_benchmark_comparison.py  plot_combined.py  plot_multi_core.py  plot_results.py  plot_series1_epsilon.py  plot_series2_bands.py  plot_series3_resolution.py  plot_series4_iterations.py  plot_series5_memory.py  plot_series6_accuracy.py  plot_series7_scaling.py  plot_single_core.py  profile_aggregate.py  profile_diff.py  run_2048_profile.py  run_meep_scaling.py  run_multi_core_benchmarks.py  run_scaling_benchmark.py  (+4 more)
benchmarks/profiles/: Makefile  optimization_checklist.md  te_profile_rev2.json
crates/backend-cpu/: Cargo.toml
crates/backend-cpu/benches/: fft.rs  resolution_scaling.rs
crates/backend-cpu/src/: _tests_lib.rs  lib.rs
crates/backend-cuda/: Cargo.toml  build.rs
crates/backend-cuda/src/: cufft.rs  cufft_sys.rs  kernels.rs  lib.rs
crates/backend-wasm/: Cargo.toml
crates/backend-wasm/examples/: README.md  bandWorker.ts  mpb2d-wasm.d.ts  square_lattice_tutorial.toml  useBandStructure.tsx
crates/backend-wasm/src/: lib.rs  streaming.rs
crates/bulk-driver/: Cargo.toml  README.md
crates/bulk-driver-core/: Cargo.toml
crates/bulk-driver-core/src/: config.rs  expansion.rs  filter.rs  lib.rs  result.rs
crates/bulk-driver-core/tests/: parse_repo_tomls.rs
crates/bulk-driver/examples/: README.md  ea_config.toml  stream_config.toml  two_atom_sweep.toml
crates/bulk-driver/src/: adaptive.rs  batch.rs  channel.rs  config.rs  driver.rs  expansion.rs  lib.rs  main.rs  output.rs  stream.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/blaze/: __init__.py  solve.py
crates/python/src/: lib.rs  operator_data.rs  streaming.rs
crates/validation/: Cargo.toml
crates/validation/src/: geometry_sampling.rs  main.rs  validation_geometry.rs  validation_kspace.rs  validation_lattice.rs  validation_precompute.rs  validation_reciprocal.rs  validation_smoothing.rs  validation_utils.rs
doc/: README.md  backend.md  backend_cpu.md  bandstructure.md  cli.md  dielectric.md  eigensolver.md  field.md  geometry.md  grid.md  io.md  lattice.md  logging.md  operator.md  polarization.md  reference.md  symmetry.md  units.md
docs/: architecture.md  benchmarks.md  optimization_analysis.md  usage-cli.md  usage-toml.md
examples/: band_diagram_blaze.py  band_diagram_mpb.py  bulk_benchmark_100.toml  bulk_benchmark_1000.toml  bulk_benchmark_24x24.toml  bulk_benchmark_real.toml  bulk_parameter_sweep.toml  bulk_selective_output.toml  bulk_simple_sweep.toml  bulk_stress_test.toml  bulk_two_atom_basis_sweep.toml  ea_moire_lattice.toml  hex_air_hole.toml  hex_eps13_r0p3_te.toml  hex_eps13_r0p3_te_res24.toml  hex_eps13_r0p3_te_res48.toml  hex_eps13_r0p3_tm.toml  hex_eps13_r0p3_tm_res24.toml  hex_eps13_r0p3_tm_res48.toml  oblique_two_atom.toml  profile_square_te_res64.toml  profile_square_tm_res64.toml  rectangular_air_hole.toml  square_air_hole.toml  square_eps13_r0p3_te_res24.toml  square_eps13_r0p3_te_res48.toml  square_eps13_r0p3_tm_res24.toml  square_eps13_r0p3_tm_res24_light.toml  square_eps13_r0p3_tm_res48.toml  square_eps6_r0p3_te_res64.toml  square_eps6_r0p3_tm_res64.toml  square_two_atom_basis.toml  test_ea_single.toml  triangular_air_hole.toml  triangular_two_atom.toml  triangular_two_atom_sweep.toml
paper/: .gitignore  Makefile  README.md  latexmkrc  main.tex  metadata.tex  preamble.tex  references.bib
paper/sections/: blaze2d.tex  conclusion.tex  introduction.tex
python/: README.md  benchmark_blaze_bulk_100.py  benchmark_mpb.py  benchmark_mpb_100.py  benchmark_mpb_vs_rust.py  environment.yml  generate_square_tm_bands.py  generate_uniform_reference.py  visualize_two_atom_basis.ipynb
python/evaluation/: Makefile  append_benchmark.sh  benchmark_square.yaml  compare_hex_lowres.ipynb  compare_square_highres.ipynb  compare_square_lowres.ipynb  report_pipeline_inspection.py
python/reference-data/: hex_te_eps13_r0p3_res24_k6_b8_mpb.json  hex_tm_eps13_r0p3_res24_k6_b8_mpb.json
python/validation/: Makefile  README.md  geometry_validation.ipynb  kspace_validation.ipynb  lattice_validation.ipynb  precompute_moduleC.ipynb  precompute_visualization.ipynb  reciprocal_validation.ipynb
test_ea_output/: ea_solve.toml  ea_solve_no_drift.toml  ea_solve_test.toml
web/: .env.production  .gitignore  Makefile  next.config.ts  package.json  pnpm-lock.yaml  theme.config.js  theme.config.tsx  tsconfig.json
web/.husky/: pre-commit
web/app/: global.css  layout.tsx
web/components/: BlogCard.tsx  Citation.tsx  Figure.tsx  FooterIcons.tsx  HeroImage.tsx  PdfViewer.tsx
web/content/: _meta.js  architecture.mdx  benchmarks.mdx  blaze.mdx  demo.mdx  examples.mdx  index.mdx  installation.mdx  introduction.mdx  paper.mdx  potential.mdx  roadmap.mdx  thesis.mdx  workbench.mdx
web/docs/: NextraStyling.md
web/examples/: README.md  blaze2d-wasm.d.ts  square_lattice_tutorial.toml  useBandStructure.tsx
web/lib/: benchmark-data.ts  paths.ts  use-benchmarks.ts
web/public/: .gitignore
web/scripts/: convert_phase1_data.py  (+2 more)
(+251 files in other folders)
