[workspace]
members = [
    "crates/core",
    "crates/backend-cpu",
    "crates/backend-wasm",
    "crates/backend-cuda",
    "crates/cli",
    "crates/python",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
authors = ["RnLe <dev@rnle.dev>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"], default-features = true }
faer = "0.23"
num-complex = { version = "0.4", features = ["serde"] }
rayon = "1.10"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
criterion = "0.7"
num_cpus = "1.16"
