[workspace]
members = [
    "crates/core",
    "crates/backend-cpu",
    "crates/backend-wasm",
    "crates/backend-cuda",
    "crates/cli",
    "crates/bulk-driver-core",
    "crates/bulk-driver",
    "crates/python",
    # "crates/validation",  # Deactivated - uses eigensolver_old
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = ["RnLe <dev@rnle.dev>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"], default-features = true }
faer = "0.23"
log = "0.4"
num-complex = { version = "0.4", features = ["serde"] }
rayon = "1.10"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
criterion = "0.8"
num_cpus = "1.16"

# ============================================================================
# Optimization Profiles
# ============================================================================

[profile.release]
# faer and rustfft are already heavily optimized with SIMD
panic = "abort"       # No unwinding overhead
debug = true          # Keep debug symbols for profiling
codegen-units = 1     # Maximize optimization (slower build)
lto = "fat"           # Enable Link Time Optimization to remove cross-crate overhead (like faer::noalias_annotate)
opt-level = 3         # Ensure maximum optimization

[profile.bench]
inherits = "release"
