[package]
name = "mpb2d-backend-cpu"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mpb2d-core = { path = "../core" }
num-complex.workspace = true
rayon.workspace = true
rustfft.workspace = true
thiserror.workspace = true
