[package]
name = "mpb2d-backend-cuda"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
cuda = ["dep:cudarc", "mpb2d-core/cuda"]

[dependencies]
mpb2d-core = { path = "../core" }
num-complex.workspace = true
cudarc = { version = "0.18", optional = true, features = ["cuda-version-from-build-system", "cublas", "driver"] }
