[package]
name = "blaze2d-backend-cuda"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# CUDA backend uses cuBLAS for linear algebra but CPU FFT (rustfft) for transforms.
# Benchmarks showed cuFFT has too much overhead for typical photonic crystal grid sizes.
cuda = ["dep:cudarc", "dep:rustfft", "blaze2d-core/cuda"]

[dependencies]
blaze2d-core = { path = "../core" }
num-complex.workspace = true
cudarc = { version = "0.18", optional = true, features = ["cuda-version-from-build-system", "cublas", "driver", "nvrtc"] }
log = "0.4"
rustfft = { version = "6.2", optional = true }
