[package]
name = "mpb2d-backend-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindings = ["dep:wasm-bindgen"]

[dependencies]
mpb2d-core = { path = "../core" }
num-complex.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
