[package]
name = "mpb2d-backend-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindings = ["dep:wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen-futures"]
streaming = ["bindings"]

[dependencies]
mpb2d-core = { path = "../core" }
mpb2d-bulk-driver = { path = "../bulk-driver" }
mpb2d-backend-cpu = { path = "../backend-cpu" }
num-complex.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
