[package]
name = "blaze2d-backend-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "WebAssembly backend with streaming support for Blaze bulk driver"

[lib]
crate-type = ["cdylib", "rlib"]

# Disable wasm-opt as the bundled version doesn't support bulk-memory by default.
# The WASM output is still valid and optimized by LLVM, just slightly larger.
# Modern browsers (Chrome 75+, Firefox 79+, Safari 15+) support bulk-memory.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[features]
default = ["wasm-linalg"]
wasm-linalg = ["blaze2d-core/wasm-linalg", "blaze2d-bulk-driver-core/wasm-linalg", "blaze2d-backend-cpu/wasm-linalg"]
bindings = ["dep:wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:console_error_panic_hook"]
streaming = ["bindings"]

[dependencies]
blaze2d-core = { path = "../core", default-features = false }
blaze2d-bulk-driver-core = { path = "../bulk-driver-core", default-features = false }
blaze2d-backend-cpu = { path = "../backend-cpu", default-features = false }
num-complex.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
