[package]
name = "blaze2d-bulk-driver-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Platform-agnostic core types and logic for Blaze bulk driver"

[features]
default = ["native-linalg", "mixed-precision"]
native-linalg = ["blaze2d-core/native-linalg"]
wasm-linalg = ["blaze2d-core/wasm-linalg"]
mixed-precision = ["blaze2d-core/mixed-precision"]

[dependencies]
# Workspace dependencies (platform-agnostic only)
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
thiserror.workspace = true
log.workspace = true

# Internal crates (core types only)
blaze2d-core = { path = "../core", default-features = false }
