[package]
name = "blaze2d-bulk-driver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Smart multi-threaded driver for bulk Blaze parameter sweep calculations"

[features]
default = ["native-linalg"]
native-linalg = ["blaze2d-core/native-linalg", "blaze2d-bulk-driver-core/native-linalg", "blaze2d-backend-cpu/native-linalg"]
wasm-linalg = ["blaze2d-core/wasm-linalg", "blaze2d-bulk-driver-core/wasm-linalg", "blaze2d-backend-cpu/wasm-linalg"]
cuda = ["blaze2d-backend-cpu/cuda", "dep:blaze2d-backend-cuda"]

[dependencies]
# Workspace dependencies
clap.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
num_cpus.workspace = true

# Internal crates
blaze2d-bulk-driver-core = { path = "../bulk-driver-core", default-features = false }
blaze2d-core = { path = "../core", default-features = false }
blaze2d-backend-cpu = { path = "../backend-cpu", default-features = false }
blaze2d-backend-cuda = { path = "../backend-cuda", optional = true }

# Additional dependencies
env_logger = "0.11"
chrono = "0.4"
indicatif = "0.17"
parking_lot = "0.12"
csv = "1.3"
crossbeam-channel = "0.5"

# Optional async support for streaming
tokio = { version = "1", features = ["sync"], optional = true }
tikv-jemallocator = "0.6.1"

[dev-dependencies]
tempfile = "3"
