[package]
name = "mpb2d-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
cuda = ["mpb2d-backend-cpu/cuda", "dep:mpb2d-backend-cuda"]

[dependencies]
clap.workspace = true
env_logger = "0.11"
log.workspace = true
mpb2d-core = { path = "../core" }
mpb2d-backend-cpu = { path = "../backend-cpu" }
mpb2d-backend-cuda = { path = "../backend-cuda", optional = true }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono = "0.4"
