[package]
name = "blaze2d-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
cuda = ["blaze2d-backend-cpu/cuda", "dep:blaze2d-backend-cuda"]

[dependencies]
clap.workspace = true
env_logger = "0.11"
log.workspace = true
blaze2d-core = { path = "../core" }
blaze2d-backend-cpu = { path = "../backend-cpu" }
blaze2d-backend-cuda = { path = "../backend-cuda", optional = true }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono = "0.4"
