[package]
name = "mpb2d-python"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindings = ["dep:pyo3"]

[dependencies]
log.workspace = true
mpb2d-core = { path = "../core" }
mpb2d-bulk-driver = { path = "../bulk-driver" }
mpb2d-backend-cpu = { path = "../backend-cpu" }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
crossbeam-channel = "0.5"
parking_lot = "0.12"
