[package]
name = "blaze2d"
version = "0.4.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "BLAZE - Band-structure LOBPCG Accelerated Zone Eigensolver for 2D Photonic Crystals"
repository = "https://github.com/RnLe/blaze2d"
keywords = ["photonic-crystals", "band-structure", "eigensolver", "physics"]
categories = ["science", "simulation"]

[lib]
name = "blaze"
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindings = ["dep:pyo3"]

[dependencies]
log.workspace = true
blaze2d-core = { path = "../core" }
blaze2d-bulk-driver = { path = "../bulk-driver" }
blaze2d-backend-cpu = { path = "../backend-cpu" }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
crossbeam-channel = "0.5"
parking_lot = "0.12"
