[package]
name = "mpb2d-validation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
mpb2d-core = { path = "../core" }
mpb2d-backend-cpu = { path = "../backend-cpu" }
serde.workspace = true
serde_json.workspace = true
num-complex.workspace = true
